--- a/Homework8.Rmd
+++ b/Homework8.Rmd
@@ -29,7 +29,7 @@ We will first consider the **liquor store data `Iowa_Liquor_Stores.csv`**.
   
 - How many different states are included in the dataset? Use `filter()` function in `dplyr` package to remove the stores outside Iowa.
     
-    With Unique, I can see that "IL" "GA" "CA", and "CO" included aside from Iowa.
+    With Unique, I can see that "IL" "GA" "CA", and "CO" are included aside from Iowa. So 6 total states. 
     
 - How many different cities of Iowa are included in the dataset?  
   
@@ -48,7 +48,8 @@ library(tidyverse)
 A = (Iowa_Liquor_Stores)
 dim(A)
 
-unique(A$State)
+(unique(A$State))
+length(unique(A$State))
 
 A1=dplyr::filter(A, State=="IA")
 unique(A1$City)
@@ -58,8 +59,9 @@ count(A1, Inactive == "TRUE")
 A2=A1 %>% group_by(City) %>% summarise(
   n=n(),
   unactive = mean(Inactive))
+
   
-A2 %>% arrange(desc(n))
+A2 %>% arrange(desc(n)) %>% head(10)
 
 #Done
 ```
@@ -76,17 +78,20 @@ _ Make `City` variable as a factor.
 ```{r, message = FALSE}
 # place the code for your answer here
 A3 =dplyr::filter(A1, `Store Status`=="A")
+#removing inactive stores
 A4 = A3%>% group_by(City)  %>% summarise(
   n=n()) %>% arrange(desc(n))
 print(A4)
+#number of active stores in all towns in Iowa
 
 A5 =dplyr::filter(A4, n>=40) 
 print(A5)
 
-as.factor(A5$City)
+#A5 = as.factor(A5$City)
+#removed
 
-
-A5 %>% mutate(City.reorder = factor(City, levels(reorder(City, n, median, na.rm = TRUE)))) 
+#A5 = A5 %>% mutate(City.reorder = factor(City, levels(reorder(City, n, median, na.rm = TRUE)))) 
+#removed
 
 ggplot(filter(A5, City %in% c("Cedar Rapids", "Des Moines", "Davenport", "Council Bluffs", "Dubuque")), aes(x=City)) + geom_bar(aes(weight = n))
 
@@ -118,8 +123,9 @@ print(Q3)
 
 #Q3 is only identifying active stores
 
-stores1=#sort to have "other"
-#need to make this extra variable
+A6=Q3 %>% mutate(company=replace(company, !(company %in% c ("Casey's", "Hy-Vee", "Kum", "Fareway")), "other"))
+print(A6)
+#Naming all other companies "other"
   
   
 Q5=stores1 %>% filter(company %in% c("Casey's", "Hy-Vee", "Kum", "Fareway")) %>% filter(City %in% c("Cedar Rapids","Council Bluffs","Davenport","Des Moines","Dubuque" ))
@@ -133,7 +139,10 @@ print(Q6)
   
 #Q6 is the arranged print of Q5 summarizing the number of stores in only the selected towns
 
-ggplot(Q5, aes(x=City, fill=company), position = "dodge") + geom_bar()
+#Q5= Q5 %>% reorder(City( c))
+#need to reorder cites
+
+ggplot(Q5, aes(x=City, fill=company)) + geom_bar(position = "dodge")
 #with new data set, make bar chart to compare, with a new color for the different companies with dodge on
 
 #done
@@ -151,8 +160,11 @@ A.location = A.location2 %>% separate(Longitude, into = c("Longitude", "drop"), 
 Use ggplot2, draw a scatter plot of the location of all active liquor stores in Iowa by the lattitude and longtitude. Use different colors for the variable `company`. Note that we may need to change the format of lattitude and longtitude.
 
 ```{r, message = FALSE}
+stores2 = A3 %>% separate(Name, into = c("company", "name2"), sep = " ") %>% select(-name2)
+stores3=stores2 %>% mutate(company=replace(company, !(company %in% c ("Casey's", "Hy-Vee", "Kum", "Fareway")), "other"))
 # place the code for your answer here
-A.location1 = stores1 %>% separate('Store Address', into = c("Address", "Location"), sep = "\n\\(")
+A.location1 =  stores3 %>% separate('Store Address', into = c("Address", "Location"), sep = "\n\\(")
+#supposed to have all other stores as other
 A.location2 = A.location1 %>% separate(Location, into = c("Latitude", "Longitude"), sep = ",") %>% select(-Address)
 A.location = A.location2 %>% separate(Longitude, into = c("Longitude", "drop"), sep = "\\)") %>% select(-drop)
 #original adding question requirements 
@@ -160,7 +172,7 @@ A.location = A.location2 %>% separate(Longitude, into = c("Longitude", "drop"), 
 A.location$Longitude = as.numeric(A.location$Longitude)
 A.location$Latitude=  as.numeric(A.location$Latitude)
 
-
+print(A.location)
 str(A.location)
 
 ggplot(A.location, aes(x=Latitude, y=Longitude, color=company)) + geom_point()
@@ -186,6 +198,14 @@ W1=Story_County_Liquor_Sales_New
 W1$Volume.Sold..Liters. <- as.numeric(W1$Volume.Sold..Liters.)
 W1$Sale..Dollars. <- as.numeric(W1$Sale..Dollars.)
 
+W1=W1 %>% mutate(City=replace(City, City=="AMES", "Ames"))
+W1=W1 %>% mutate(City=replace(City, City=="NEVADA", "Nevada"))
+W1=W1 %>% mutate(City=replace(City, City=="STORY CITY", "Story City"))
+W1=W1 %>% mutate(City=replace(City, City=="COLO", "Colo"))
+W1=W1 %>% mutate(City=replace(City, City=="HUXLEY", "Huxley"))
+W1=W1 %>% mutate(City=replace(City, City=="SLATER", "Slater"))
+W1=W1 %>% mutate(City=replace(City, City=="MAXWELL", "Maxwell"))
+
 W1 <- W1 %>%filter(City %in% c("Ames"))
 W2 = W1 %>% separate(Date, into = c("Month", "Day", "Year"), sep = "/")
 
@@ -198,7 +218,7 @@ print(W2)
 
 ggplot(W2, aes(x=Month, y=Sale..Dollars., color=Year)) + geom_point()
 
-#might not be total sales, could be each instance of sales in a month
+
 
 
 ```
